Fixed spacing

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -259,7 +259,7 @@ p {
     line-height: 1.5;
   }
   .content-container {
-    padding: 15px 10px;
+    padding: 0px 10px;
     text-align: center;
   }
   .content p {
